--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- Profile Section -->
         <div class="profile col">
-            <img src="Assets/Images/profile-pic.png" class="profile-pic" alt="img" height="300px">
+            <img src="Assets/Images/profile-pic.png" class="profile-pic" alt="img" height="350px">
             <h1> Bentos Walker</h1>
             <p>I am a Web Designer based in San-francisco</p>
 
@@ -171,6 +171,115 @@
     </div>
     <!--------------- End of Introduction Section--------------->
 
+    <!------------------ Works and Projects ------------------>
+    <section class="work-content">
+
+        <!-- Define Work Intro -->
+        <div class="works">
+            <h1>Works & Projects</h1>
+            <p>Check put some of my design projects, meticulously crafted with love and dedication, each one reflecting
+                the
+                passion and soul I poured into every detail.</p>
+
+            <!-- Define Projects Section -->
+            <div class="projects">
+                <ul class="project-nav">
+                    <li>
+                        <a href="/" target="_parent">
+                            All
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/" target="_parent">
+                            Design
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/" target="_parent">
+                            Game
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/" target="_parent">
+                            Branding
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/" target="_parent">
+                            Marketing
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Projects Description -->
+            <div class="desc">
+                <div class="desc-sec">
+                    <div class="description">
+                        <img src="Assets/Images/image1.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent"> Design</a>
+                        <h3>Mobile Application Design</h3>
+                    </div>
+
+                    <div class="description">
+                        <img src="Assets/Images/image2.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent"> Game</a>
+                        <h3>Website Makeup Design</h3>
+                    </div>
+
+                    <div class="description">
+                        <img src="Assets/Images/image3.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent"> Branding</a>
+                        <h3>Brand Identity and Motion Design</h3>
+                    </div>
+
+
+                </div>
+
+                <div class="desc-sec">
+                    <div class="description">
+                        <img src="Assets/Images/image4.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent">Marketing</a>
+                        <h3>Mobile Application Design</h3>
+                    </div>
+
+                    <div class="description">
+                        <img src="Assets/Images/image3.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent"> Design</a>
+                        <h3>Brand Identity and Motion Design</h3>
+                    </div>
+
+                    <div class="description">
+                        <img src="Assets/Images/image1.jpg" alt="img">
+                        <a class="project-desc" href="/" target="_parent">Marketing</a>
+                        <h3>Brand Identity and Motion Design</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---------------- End of works and projects ----------------->
+
+    <!-------------------- Section for contact ----------------->
+    <section class="content2">
+        <div class="kickstart">
+            <h1>Are You Ready to kickstart your project with a touch of magic?</h1>
+            <p>Reach out and let's make it happen ✨. I'm also available for full-time or Part-time opportunities to push
+                the boundaries of design and deliver exceptional work.</p>
+            <div class="btn-talk">
+                <a class="contact" href="/">Let's Talk
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                        class="bi bi-download" viewBox="0 0 16 16">
+                        <path
+                            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
+                        <path
+                            d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!---------------- End for contact section ----------------->
 </body>
 
 </html>
