--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
         </div>
     </section>
     <!---------------- End for contact section ----------------->
+
+    <!--------------------Footer Section ----------------------->
+    <footer>
+        <div>Copyright @2024, Bentos All Rights Reserved.</div>
+        <div>Crafted with ❤️ theme_ocean</div>
+    </footer>
+    <!------------------- End of Footer Section --------------------->
 </body>
 
 </html>
