--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
     <!--------------------Footer Section ----------------------->
     <footer>
-        <div>Copyright @2024, Bentos All Rights Reserved.</div>
+        <div class="footer1">Copyright @2024, <p style="color:#eb5227 ;">Bentos</p> All Rights Reserved.</div>
         <div>Crafted with ❤️ theme_ocean</div>
     </footer>
     <!------------------- End of Footer Section --------------------->
