--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                     <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" href="/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Service</a>
+                    <a class="nav-link" href="/service.html">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Work</a>
+                    <a class="nav-link" href="/work.html">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Assets/HTML/contact.html">Contact</a>
+                    <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
 
             </ul>
