--- a/work.html
+++ b/work.html
@@ -116,19 +116,19 @@
                 <div class="desc-sec">
                     <div class="description">
                         <img src="Assets/Images/image1.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent"> Design</a>
+                        <a class="project-desc" href="/work.html" target="_parent"> Design</a>
                         <h3>Mobile Application Design</h3>
                     </div>
 
                     <div class="description">
                         <img src="Assets/Images/image2.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent"> Game</a>
+                        <a class="project-desc" href="/work.html" target="_parent"> Game</a>
                         <h3>Website Makeup Design</h3>
                     </div>
 
                     <div class="description">
                         <img src="Assets/Images/image3.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent"> Branding</a>
+                        <a class="project-desc" href="/work.html" target="_parent"> Branding</a>
                         <h3>Brand Identity and Motion Design</h3>
                     </div>
 
@@ -138,19 +138,19 @@
                 <div class="desc-sec">
                     <div class="description">
                         <img src="Assets/Images/image4.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent">Marketing</a>
+                        <a class="project-desc" href="/work.html" target="_parent">Marketing</a>
                         <h3>Mobile Application Design</h3>
                     </div>
 
                     <div class="description">
                         <img src="Assets/Images/image3.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent"> Design</a>
+                        <a class="project-desc" href="/work.html" target="_parent"> Design</a>
                         <h3>Brand Identity and Motion Design</h3>
                     </div>
 
                     <div class="description">
                         <img src="Assets/Images/image1.jpg" alt="img">
-                        <a class="project-desc" href="/" target="_parent">Marketing</a>
+                        <a class="project-desc" href="/work.html" target="_parent">Marketing</a>
                         <h3>Brand Identity and Motion Design</h3>
                     </div>
                 </div>
