--- a/index.html
+++ b/index.html
@@ -29,22 +29,25 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Animate.css CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body>
     <!---------------Header/ Navigation Define--------------->
-    <div class="header">
+    <div class="header ">
         <!-- Logo Section -->
-        <div class="logo">
+        <div class="logo animate__bounceIn">
             <a class="navbar-logo" href="/">
                 <img src="Assets/Images/logo.png" class="logo img-fluid" alt="logo">
             </a>
         </div>
 
         <!-- Navigation Section -->
-        <div class="navbar">
+        <div class="navbar animate__bounceIn">
             <ul class="navbar-list" id="navigation-link">
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a class="nav-link" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -64,7 +67,7 @@
         </div>
 
         <!-- Hire Me Section -->
-        <div class="hire-me">
+        <div class="hire-me animate__bounceIn">
             <button type="button" class="btn btn-dark">Hire Me <i class="fa-brands fa-hire-a-helper"></i> </button>
         </div>
     </div>
@@ -266,7 +269,7 @@
             <h1>Are You Ready to kickstart your project with a touch of magic?</h1>
             <p>Reach out and let's make it happen ✨. I'm also available for full-time or Part-time opportunities to push
                 the boundaries of design and deliver exceptional work.</p>
-            <div class="btn-talk">
+            <div class="btn-talk" >
                 <a class="contact" href="/">Let's Talk
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                         class="bi bi-download" viewBox="0 0 16 16">
@@ -283,7 +286,7 @@
 
     <!--------------------Footer Section ----------------------->
     <footer>
-        <div class="footer1">Copyright @2024, <p style="color:#eb5227 ;">Bentos</p> All Rights Reserved.</div>
+        <div class="footer1">Copyright @2024, <a class="bentos" href="/index.html">Bentos</a> All Rights Reserved.</div>
         <div>Crafted with ❤️ theme_ocean</div>
     </footer>
     <!------------------- End of Footer Section --------------------->
