--- a/contact.html
+++ b/contact.html
@@ -29,20 +29,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Animate.css CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
     <!---------------Header/ Navigation Define--------------->
     <div class="header">
         <!-- Logo Section -->
-        <div class="logo">
+        <div class="logo animate__bounceIn">
             <a class="navbar-logo" href="/">
                 <img src="Assets/Images/logo.png" class="logo img-fluid" alt="logo">
             </a>
         </div>
 
         <!-- Navigation Section -->
-        <div class="navbar">
+        <div class="navbar animate__bounceIn">
             <ul class="navbar-list" id="navigation-link">
                 <li class="nav-item">
                     <a class="nav-link" href="/index.html">Home</a>
@@ -64,7 +67,7 @@
         </div>
 
         <!-- Hire Me Section -->
-        <div class="hire-me">
+        <div class="hire-me animate__bounceIn">
             <button type="button" class="btn btn-dark">Hire Me <i class="fa-brands fa-hire-a-helper"></i> </button>
         </div>
     </div>
@@ -126,12 +129,12 @@
                             <label for="message">Your Message</label>
                             <textarea id="message" name="message" placeholder="Write Your message"></textarea>
                         </div>
-                        <button type="submit" class="submit-btn">Send Me Message  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff"
-                            class="bi bi-envelope" viewBox="0 0 16 16">
-                            <path
-                                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
-                        </svg>
-                    </button>
+                        <button type="submit" class="submit-btn">Send Me Message <svg xmlns="http://www.w3.org/2000/svg"
+                                width="20" height="20" fill="#fff" class="bi bi-envelope" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                            </svg>
+                        </button>
                     </form>
                 </div>
 
@@ -164,7 +167,7 @@
 
     <!--------------------Footer Section ----------------------->
     <footer>
-        <div class="footer1">Copyright @2024, <p style="color:#eb5227 ;">Bentos</p> All Rights Reserved.</div>
+        <div class="footer1">Copyright @2024, <a class="bentos" href="/index.html">Bentos</a> All Rights Reserved.</div>
         <div>Crafted with ❤️ theme_ocean</div>
     </footer>
     <!------------------- End of Footer Section --------------------->
