--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="intro row">
 
         <!-- Profile Section -->
-        <div class="profile col">
+        <div class="profile col-3">
             <img src="Assets/Images/profile-pic.png" class="profile-pic" alt="img" height="350px">
             <h1> Bentos Walker</h1>
             <p>I am a Web Designer based in San-francisco</p>
